--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ethan Davis",
-  "license": "UNLICENSED",
+  "license": "SEE LICENSE IN LICENSE.md",
   "dependencies": {
     "mineflayer": "^2.6.1"
   }
