--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "micro.client",
-  "version": "1.0.0",
-  "description": "",
-  "main": "cl2.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Ethan Davis",
-  "license": "SEE LICENSE IN LICENSE.md",
-  "dependencies": {
-    "mineflayer": "^2.6.1"
-  }
+	"name": "micro.client",
+	"version": "1.0.0",
+	"description": "",
+	"main": "lib/index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "Ethan Davis",
+	"license": "SEE LICENSE IN LICENSE.md",
+	"dependencies": {
+		"mineflayer": "^2.6.1"
+	}
 }
